--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,11 @@
 <body>
   <app-navbar></app-navbar>
   <app-root></app-root>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <p>&copy; 2025 ShadowTorrent. Minden jog fenntartva.</p>
+      </div>
+  </footer>
 </body>
 </html>
