--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
   <footer class="footer">
     <div class="footer-content">
-      <p>&copy; 2025 ShadowTorrent. Minden jog fenntartva.</p>
+      <p>&copy; 2025 ShadowTorrent v0.9.0 Minden jog fenntartva.</p>
       </div>
   </footer>
 </body>
